# Pandora

./: .gitignore  .kiroignore  .yami-ai-cli.json  AGENTS.md  README.md  _test.cjs  _test2.cjs  _test3.cjs  components.json  index.html  package-lock.json  package.json  test_plugin.cjs  test_plugin2.cjs  tsconfig.json  vite.config.ts
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.github/workflows/: release.yml
.kiro/settings/: lsp.json  mcp.json
.kiro/steering/: architecture.md  bmad-agent-bmad-master.md  bmad-agent-bmm-analyst.md  bmad-agent-bmm-architect.md  bmad-agent-bmm-dev.md  bmad-agent-bmm-pm.md  bmad-agent-bmm-qa.md  bmad-agent-bmm-quick-flow-solo-dev.md  bmad-agent-bmm-sm.md  bmad-agent-bmm-tech-writer.md  bmad-agent-gds-game-qa.md  (+90 more)
docs/: dev-notes.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: commands.rs  config.rs  connection.rs  mod.rs  query.rs  schema.rs  sql_builder.rs  types.rs
src-tauri/src/http/: mod.rs
src-tauri/src/plugin/: asar.rs  commands.rs  db.rs  ffmpeg.rs  manager.rs  marketplace.rs  mod.rs  node_bridge.rs  screen.rs  server.rs  sharp.rs  simulate.rs  ubrowser.rs
src-tauri/src/redis/: commands.rs  config.rs  connection.rs  mod.rs  types.rs
src-tauri/src/script/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/system/: mod.rs
src-tauri/src/toolkit/: mod.rs
(+213 files in other folders)
