[package]
name = "pandora"
version = "0.1.0"
description = "Developer Toolbox"
edition = "2021"

[lib]
name = "pandora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"