[package]
name = "pandora"
version = "0.1.0"
description = "Developer Toolbox"
edition = "2021"

[lib]
name = "pandora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
mysql_async = "0.34"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
hex = "0.4"
log = "0.4"
byteorder = "1"
urlencoding = "2"
zip = "2"
flate2 = "1"
base64 = "0.22"
